<resources>
    <string name="app_name">PBM School</string>
    <string name="title_home">PBM School</string>
    <string name="title_homee">Home</string>
    <string name="title_Schedule">Schedule</string>
    <string name="title_Classes">Classes</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_homework">Homework</string>
    <string name="title_Connect">Connect</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_signin">signin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="previous">Previous</string>

        <string-array name="spinner_items">
            <item>Item 1</item>
            <item>Item 2</item>
            <item>Item 3</item>
            <item>Item 4</item>
        </string-array>

</resources>