<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_classes"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/title_Classes" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/title_Schedule" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_homee" />
    <item
        android:id="@+id/navigation_attendance"
        android:icon="@drawable/baseline_assignment_ind_24"
        android:title="@string/title_attendance" />
    <item
        android:id="@+id/navigation_homework"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/title_homework" />


</menu>