<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">



    <fragment
        android:id="@+id/navigation_home"
        android:name="com.jags.pbm.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_homework"
        android:name="com.jags.pbm.ui.homework.HomeworkFragment"
        android:label="@string/title_homework"
        tools:layout="@layout/fragment_homework" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.jags.pbm.ui.attendance.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.jags.pbm.ui.schedule.ScheduleFragment"
        android:label="@string/title_Schedule"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.jags.pbm.ui.classes.ClassesFragment"
        android:label="@string/title_Classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.jags.pbm.ui.notification.NotificationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.jags.pbm.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_aboutUs"
        android:name="com.jags.pbm.ui.aboutus.AboutUsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_about_us" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.jags.pbm.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" />
</navigation>